List.of() creates an immutable List instance, without a backing ArrayList, saving one Object[] array creation and saving ~12 bytes for each component in the hierarchy.   This ends up being a few KB for each of our pages, resulting in meaningful memory savings, a little less GC pressure and a little more memory fitting into the processor caches.